HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeBoolParameter/Source/Main.uv
//! Rejected FFI specimen for prohibited FfiSafe type categories.

extern "C" {
    public procedure importedBool(value: bool) -> i32
}

